--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,14 +1,41 @@
 spring.application.name=study
 
-# local-db
-spring.profiles.include=real-db
+# local-db 이면 내컴퓨터에있는걸로 사용 /real이면 서버에서상ㅇ/ private real하면 사용해야됨
+spring.profiles.include=local-db, private
 
-server.port=8080
+server.port=9090
 spring.datasource.url=${mysql_url}
 spring.datasource.username=${mysql_username}
 spring.datasource.password=${mysql_password}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 mybatis.mapper-locations=${mybatis_locations}
+
+
+#Google SMTP
+
+
+
+#Kakao oauth
+kakao.client.id=${kakao.client.id}
+kakao.redirect.uri=${kakao.redirect.uri}
+kakao.client.secret=${kakao.client.secret}
+kakao.oauth.tokenuri=${kakao.oauth.tokenuri}
+kakao.oauth.userinfouri=${kakao.oauth.userinfouri}
+kakao.user.logout=${kakao.user.logout}
+
+
+#Naver oauth
+naver.client.id=${naver.client.id}
+naver.redirect.uri=${naver.redirect.uri}
+naver.client.secret=${naver.client.secret}
+
+
+# KakaoPay oauth
+kakaopay.api.secret.key=${kakaopay.api.secret.key}
+cid=${cid}
+approval=${approval}
+cancel=${cancel}
+fail=${fail}
 
 file.ckdir=C:\\Dev\\upload\\ckeditor\\
