--- a/src/main/resources/application-private.properties
+++ b/src/main/resources/application-private.properties
@@ -19,3 +19,16 @@ cid=TC0ONETIME
 approval=http://localhost:9090/kakao/approval
 cancel=http://localhost:9090/kakao/cancel
 fail=http://localhost:9090/kakao/fail
+
+# Gmail
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=leehojun95@gmail.com
+spring.mail.password=ektertxrdcvaowdk
+
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.auth=true
+
+spring.mail.transport.protocol=smtp
+spring.mail.debug=true
+#spring.mail.default-encoding=UTf-8
