--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -38,4 +38,16 @@ approval=${approval}
 cancel=${cancel}
 fail=${fail}
 
+# Gmail
+spring.mail.host=${spring.mail.host}
+spring.mail.port=${spring.mail.port}
+spring.mail.username=${spring.mail.username}
+spring.mail.password=${spring.mail.password}
+
+spring.mail.properties.mail.smtp.starttls.enable=${spring.mail.properties.mail.smtp.starttls.enable}
+spring.mail.properties.mail.smtp.auth=${spring.mail.properties.mail.smtp.auth}
+
+spring.mail.transport.protocol=${spring.mail.transport.protocol}
+spring.mail.debug=${spring.mail.debug}
+
 file.ckdir=C:\\Dev\\upload\\ckeditor\\
